// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConformerGenerator should generate conformers 1`] = `
"#1
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
   -4.5770    2.5000   -2.1185 C   0  0  0  0  0  0  0  0  0  0  0  0
   -3.9333    3.2322   -3.4776 O   0  0  0  0  0  0  0  0  0  0  0  0
   -2.8935    2.1799   -4.2575 C   0  0  0  0  0  0  0  0  0  0  0  0
   -1.2507    2.2660   -3.4812 C   0  0  0  0  0  0  0  0  0  0  0  0
   -1.3324    1.6314   -1.9352 O   0  0  0  0  0  0  0  0  0  0  0  0
   -1.4253   -0.0302   -2.0151 N   0  0  0  0  0  0  0  0  0  0  0  0
   -5.2007    1.5768   -2.4320 H   0  0  0  0  0  0  0  0  0  0  0  0
   -3.7235    2.1678   -1.4110 H   0  0  0  0  0  0  0  0  0  0  0  0
   -5.2609    3.2524   -1.5646 H   0  0  0  0  0  0  0  0  0  0  0  0
   -2.8052    2.4732   -5.3736 H   0  0  0  0  0  0  0  0  0  0  0  0
   -3.3008    1.1001   -4.1756 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.9084    3.3711   -3.4304 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.4952    1.6598   -4.1123 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.7255   -0.4000   -1.1042 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.5034   -0.4157   -2.2514 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;

exports[`ConformerGenerator should generate conformers 2`] = `
"#2
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
   -5.4499    3.1652   -4.1799 C   0  0  0  0  0  0  0  0  0  0  0  0
   -3.9333    3.2322   -3.4776 O   0  0  0  0  0  0  0  0  0  0  0  0
   -2.8935    2.1799   -4.2575 C   0  0  0  0  0  0  0  0  0  0  0  0
   -1.2507    2.2660   -3.4812 C   0  0  0  0  0  0  0  0  0  0  0  0
   -0.5676    3.7618   -3.7899 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.9379    3.8478   -3.0815 N   0  0  0  0  0  0  0  0  0  0  0  0
   -5.3836    3.5091   -5.2830 H   0  0  0  0  0  0  0  0  0  0  0  0
   -5.8544    2.0819   -4.1363 H   0  0  0  0  0  0  0  0  0  0  0  0
   -6.1706    3.8654   -3.6045 H   0  0  0  0  0  0  0  0  0  0  0  0
   -2.8052    2.4732   -5.3736 H   0  0  0  0  0  0  0  0  0  0  0  0
   -3.3008    1.1001   -4.1756 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.5761    1.4326   -3.9186 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.3564    2.1134   -2.3401 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.2462    4.8280   -3.0515 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.6088    3.2972   -3.6302 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;
